--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -5,4 +5,5 @@ html
     title 西日暮里.rb
     = stylesheet_link_tag "normalize", "all"
     = javascript_include_tag  "all"
-  = yield
+  .container
+    = yield
