--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -6,3 +6,6 @@ h1
 ul
   li= link_to 'Doorkeeper', 'https://nishinipporirb.doorkeeper.jp'
   li= link_to 'Join the community chat', 'https://ninirb-invitation.herokuapp.com'
+
+ul
+  li= link_to '第11回', '2015/04/27/ninirb-11.html'
