--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,11 +1,8 @@
 h1
   | 西日暮里.rb
 
-= image_tag 'logo.png'
-
-ul
-  li= link_to 'Doorkeeper', 'https://nishinipporirb.doorkeeper.jp'
-  li= link_to 'Join the community chat', 'https://ninirb-invitation.herokuapp.com'
+h2
+  | meetups
 
 ul
   li= link_to '第11回', '2015/04/27/ninirb-11.html'
