Apply template and add some contents.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,8 +1,69 @@
-h1
-  | 西日暮里.rb
+#index-banner.section.no-pad-bot
+  .container
+    br/
+    br/
+    h1.header.center.red-text.text-accent-2 西日暮里.rb
+    .row.center
+      h5.header.col.s12.red-text.text-accent-2 Meet Ruby enthusiasts living in the greater Nishinippori area!
 
-h2
-  | meetups
+    .row.center
+      = link_to 'Meetupに行ってみよう', 'https://nishinipporirb.doorkeeper.jp', class: 'btn-large waves-effect waves-light red accent-2', id: 'download-button'
+    br/
+    br/
+.container
+  .section
+    /! Icon Section
+    .row
+      .col.s12.m4
+        .icon-block
+          h2.center.light-blue-text
+            i.mdi-image-flash-on
+          h5.center 電源
+          p.light 大体は西日暮里駅に一番近いルノアールでやってます。ルノアールでは電源を借りれます。
+      .col.s12.m4
+        .icon-block
+          h2.center.light-blue-text
+            i.mdi-social-group
+          h5.center 会議室
+          p.light ルノアールの会議室を借りることもあります。それによって定員8人か、12人、そのときで異なります。みんな思いついたことを口に出すので、基本しゃべってます。良い会議室があったら教えてください。
+      .col.s12.m4
+        .icon-block
+          h2.center.light-blue-text
+            i.mdi-action-settings
+          h5.center Wi-Fiがほしい
+          p.light ルノアールにはWi-Fiがなかったりするので、すみません。
+  br/
+  br/
+  .section
+footer.page-footer.red.accent-2
+  .container
+    .row
+      .col.l6.s12
+        h5.white-text Community
+        p.grey-text.text-lighten-4
+          | 西日暮里の方でなにかごにょごにょやってます。ハードル高くないです。
+          br
+          | ごにょごにょ
+      .col.l3.s12
+        h5.white-text Contact
+        ul
+          li
+            a.white-text href="#!" ついったー
+          li
+            a.white-text href="#!"
+              | どあきーぱー
+              br
+              | (メール)
 
-ul
-  li= link_to '第11回', '2015/04/27/ninirb-11.html'
+      .col.l3.s12
+        h5.white-text Others
+        ul
+          li
+            a.white-text href="#!"  なかのひと1
+          li
+            a.white-text href="#!"  なかのひと2
+          li
+            a.white-text href="#!"  なかのひと3
+  .footer-copyright
+    .container
+
