--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -2,24 +2,37 @@ html
   head
     meta[charset="utf-8"]
     meta[content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"]
+    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type" /
+    meta content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" name="viewport" /
     title 西日暮里.rb
     = stylesheet_link_tag "normalize", "all"
     = javascript_include_tag  "all"
-
   body
-    .container
-      .row
-        .col.s4
-          = link_to '/' do
-            = image_tag 'logo.png'
-          ul
-            li
-              .divider
-              .section
-                = link_to 'Doorkeeper', 'https://nishinipporirb.doorkeeper.jp'
-            li
-              .divider
-              .section
-                = link_to 'Join the community chat', 'https://ninirb-invitation.herokuapp.com'
-        .col.s8
+    nav.red.accent-2 role="navigation"
+      .nav-wrapper.container
+        a#logo-container.brand-logo href="#" Nishinippori.rb
+
+    .row
+      .col.s12.m4.l3
+        = link_to '/' do
+          = image_tag 'logo.png'
+        ul
+          li
+            .divider
+            .section
+              = link_to 'Doorkeeper', 'https://nishinipporirb.doorkeeper.jp'
+          li
+            .divider
+            .section
+              = link_to 'Join the community chat', 'https://ninirb-invitation.herokuapp.com'
+          li
+            .divider
+            .section
+              h5.red-text.text-accent-2 Meetups
+          li
+            .divider
+            .section
+              = link_to '第11回', '2015/04/27/ninirb-11.html'
+
+      .col.s12.m8.l9.z-depth-1
           = yield
