--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -7,6 +7,7 @@ html
     title 西日暮里.rb
     = stylesheet_link_tag "normalize", "all"
     = javascript_include_tag  "all"
+    = google_analytics_universal_tag
   body
     nav.red.accent-2 role="navigation"
       .nav-wrapper.container
