--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -17,7 +17,7 @@ html
     .row
       .col.s12.m4.l3
         = link_to '/' do
-          = image_tag 'logo.png'
+          = image_tag 'logo.png', class: 'responsive-img'
         ul
           li
             .divider
