--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -1,1 +1,21 @@
 @import 'materialize'
+
+.logo
+  text-align: center
+  margin-top: 32px
+  margin-bottom: 16px
+  border-bottom: 1px solid
+
+.logo__image
+  display: inline-block
+  height: 100%
+  pointer-events: none
+
+header, main, footer
+  padding-left: 240px
+
+  @media only screen and (max-width : 992px)
+    padding-left: 0
+
+.page-title
+  font-size: 32px
