1周年記念会の記事

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -27,6 +27,7 @@ html
                 a.collapsible-header Meetups
                 .collapsible-body
                   ul
+                    li= link_to '第13回', '/2015/06/29/ninirb-13.html'
                     li= link_to '第11回', '/2015/04/27/ninirb-11.html'
     main
       .container
